# shit_OS

./: .gitignore  CMakeLists.txt  grub.cfg  make_iso.cmake
kernel/: loader.asm  main.cpp  multiboot_header.asm
kernel/libk/: CMakeLists.txt  tty.cpp
kernel/libk/include/: tty.hpp
